Improvements and comments from code review
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>